syntax = "proto2";
package sessionsrv;

enum OAuthProvider {
  GitHub = 0;
  None = 1;
  Bitbucket = 2;
  AzureAD = 3;
  GitLab = 4;
  Okta = 5;
  ActiveDirectory = 6;
  ChefAutomate = 7;
}

message Account {
  optional uint64 id = 1;
  optional string email = 2;
  optional string name = 3;
}

message AccountFindOrCreate {
  optional string name = 1;
  optional string email = 2;
}

// get an account by GH username
message AccountGet {
  optional string name = 1;
}

message AccountGetId {
  optional uint64 id = 1;
}

message AccountCreate {
  optional string name = 1;
  optional string email = 2;
}

message AccountUpdate {
  optional uint64 id = 1;
  optional string email = 2;
}

message AccessToken {
    optional uint64 account_id = 1;
    optional uint32 flags = 2;
    optional int64 expires = 3;
}

message AccountToken {
  optional uint64 id = 1;
  optional uint64 account_id = 2;
  optional string token = 3;
  optional string created_at = 4; // RFC3339-formatted time
}

message AccountTokensGet {
  optional uint64 account_id = 1;
}

message AccountTokenGet {
  optional uint64 id = 1;
}

message AccountTokens {
  repeated AccountToken tokens = 1;
}

message AccountTokenCreate {
  optional uint64 account_id = 1;
  optional string token = 2;
}

message AccountTokenRevoke {
  optional uint64 id = 1;
}

message AccountTokenValidate {
  optional uint64 account_id = 1;
  optional string token = 2;
}

enum SessionType {
  User = 0;
  Builder = 1;
}

message Session {
  optional uint64 id = 1;
  optional string email = 2;
  optional string name = 3;
  // base64 encoded binary representation of SessionToken
  optional string token = 4;
  optional uint32 flags = 5;
  optional string oauth_token = 6;
  optional SessionType session_type = 7;  // TBD - Remove this
}

message SessionCreate {
  optional string token = 1;
  optional string extern_id = 2;
  optional string email = 3;
  optional string name = 4;
  optional OAuthProvider provider = 5;
  optional string app_token = 6;
  optional SessionType session_type = 7;
}

message SessionGet {
  optional SessionToken token = 1;
}

message SessionToken {
  optional uint64 account_id = 1;
  optional string extern_id = 2;
  optional OAuthProvider provider = 3;
  optional bytes token = 4;
}
